JumpScript/tests/baselines/reference/parserES5ForOfStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement1.d.jump(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement1.d.jump(1,15): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement1.d.jump (2 errors) ====
    for (var i of e) {
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
                  ~
!!! error TS2304: Cannot find name 'e'.
    }